--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fastify/websocket": "^11.2.0",
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
+    "bullmq": "^5.64.1",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
     "ioredis": "^5.8.2",
