feat: tests implemented using jest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,21 @@
   "compilerOptions": {
     "module": "ESNext",
     "moduleResolution": "node",
-    "target": "ES2023",
+    "target": "ES2022",
     "strict": true,
     "esModuleInterop": true,
-    "ignoreDeprecations": "6.0",
     "outDir": "./dist",
-    "rootDir": "./src"
-  }
+    "rootDir": "./src",
+    "skipLibCheck": true
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "tests",
+    "prisma",
+    "prisma.config.ts",
+    "**/*.test.ts"
+  ]
 }
